kube/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-aks
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: backend
          servicePort: 80
        path: /backend/?(.*)
        pathType: Prefix
      - backend:
          serviceName: frontend
          servicePort: 80
        path: /?(.*)
        pathType: Prefix
